apps/powerdns/auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-auth
  namespace: dns
spec:
  selector:
    app: powerdns-auth
  ports:
  - name: dns-auth-udp
    port: 5300
    targetPort: 5300
    protocol: UDP
  - name: dns-auth-tcp
    port: 5300
    targetPort: 5300
    protocol: TCP
  - name: web
    port: 8081
    targetPort: 8081
