apps/powerdns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powerdns
  namespace: dns
spec:
  ingressClassName: nginx
  rules:
  - host: powerdns.wcrpc.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: powerdns-auth
            port:
              number: 8081
  tls:
  - hosts:
    - powerdns.wcrpc.lan
    secretName: wcrpc-tls
